--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    padding: 3%;
-    margin: 5px;
+    padding: 1%;
+    margin: 4px;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -41,7 +41,7 @@
 }
 
 #calculator {
-    width: 200px;
+    width: 300px;
     padding: 10px;
     background-color: #000000;
     border-radius: 10px;
@@ -62,5 +62,20 @@ button {
     border-radius: 10px;
     cursor: pointer;
     transition-duration: 0.2s;
+}
+
+#row1 button:first-child {
+    font-size: x-large;
+}
+
+#row5 button:first-child {
+    flex-grow: 0.95;
+}
+
+.operator {
+    background-color: rgb(0, 123, 224);
+}
+.misc {
+    background-color: rgb(235, 68, 3);
 }
 
